--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     
-    <title>Crist</title>
+    <title>Cristián Mansilla Lizama</title>
 </head>
 
 <body>
     
     <article>
         <h1>Currículum Vitae</h1>
-        <img src="Image/_DSC0011-1.jpg" width="250px">
+        <img src="Imagen/_DSC0011-1.jpg" width="250px">
         <hr>
     </article>
     <section>
