--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
             <p>Mi nombre es Cristian Mansilla Lizama, vivo en la localidad de Villa Regina,
                 en la provincia de Río Negro. Actualmente estoy en primer año de la formación de Coaching
                 Ontológico Profesional en la Escuela Internacional de Formación New Coaching.
-                También tengo un emprendimiento de Carpintería denominado el <i>"Taller de Cris"</i>.
+                También tengo un emprendimiento de Carpintería denominado el <i>"Taller de Cris"</i>,
+                un lugar donde últimamente he fusionado este oficio con mi gusto e interés por la realización
+                audiovisual, haciendo videos de mis creaciones en madera, publicando en Youtube.
                 Por último, hace pocos días he comenzado a estudiar el curso de Programador Web Inicial en la
                 UTN.
             </p>
